// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Todo Item CheckedTodo smoke-test 1`] = `
<div class="css-175oi2r r-ai505k r-17gur6a r-1loqt21 r-105ug2t"
     data-testid="card-container"
     style="background-color: rgb(255, 251, 254);"
>
  <div class="css-175oi2r r-rs99b7 r-1pi2tsx r-u8s1d r-13qz1uu r-136ojw6 r-633pao"
       data-testid="card-outline"
       style="border-color: rgba(0, 0, 0, 0.12); border-radius: 0px;"
  >
  </div>
  <div tabindex="0"
       class="css-175oi2r r-1loqt21 r-1otgn73"
  >
    <div class="css-175oi2r r-1wbh5a2"
         data-testid="card"
    >
      <div class="css-175oi2r r-3pj75a r-w7s2jr r-xd6kpl r-1m04atk r-1pyaxff r-tskmnb">
        <div class="css-175oi2r r-18u37iz r-13qz1uu">
          <div class="css-175oi2r">
            <div aria-live="polite"
                 role="checkbox"
                 tabindex="0"
                 class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-6ncur5 r-1r8g8re r-qpntkw r-1acpoxo"
                 data-testid="complete-todo"
            >
              <div class="css-175oi2r"
                   style="transform: scale(1);"
              >
                <div dir="auto"
                     role="img"
                     tabindex="-1"
                     class="css-146c3p1 r-1niwhzg r-lrvibr r-633pao"
                     style="font-size: 24px; color: rgb(103, 80, 164); transform: scaleX(1); line-height: 24px; font-family: material-community; font-weight: normal; font-style: normal;"
                >
                  󰄲
                </div>
                <div class="css-175oi2r r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-1awozwy r-1777fci">
                  <div class="css-175oi2r r-1pexk7n r-1mcorv5"
                       style="border-color: rgb(103, 80, 164); border-width: 0px;"
                  >
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="css-175oi2r r-1iusvr4 r-16y2uox r-1un7vkp">
            <div class="css-175oi2r r-16y2uox">
            </div>
            <div dir="auto"
                 class="css-146c3p1 r-fdjqy7 r-1x2decy r-ubezar"
                 data-testid="description-text"
                 style="letter-spacing: 0px; font-weight: 400; color: rgb(28, 27, 31); direction: ltr;"
            >
              Checked Todo
            </div>
            <div class="css-175oi2r r-16y2uox">
            </div>
          </div>
          <div class="css-175oi2r r-1udh08x r-crgep1 r-105ug2t"
               data-testid="label-todo-container"
               style="background-color: rgba(0, 0, 0, 0); width: 36px; height: 36px; border-width: 0px; border-radius: 18px; border-color: rgb(121, 116, 126);"
          >
            <button role="button"
                    tabindex="0"
                    class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-1awozwy r-16y2uox r-1777fci"
                    data-testid="label-todo"
                    type="button"
                    style="border-radius: 18px;"
            >
              <div dir="auto"
                   role="img"
                   tabindex="-1"
                   class="css-146c3p1 r-1niwhzg r-lrvibr r-633pao"
                   style="font-size: 20px; color: rgb(163, 213, 255); transform: scaleX(1); line-height: 20px; font-family: material-community; font-weight: normal; font-style: normal;"
              >
                󰜢
              </div>
            </button>
          </div>
          <div class="css-175oi2r r-1udh08x r-crgep1 r-105ug2t"
               data-testid="delete-todo-container"
               style="background-color: rgba(0, 0, 0, 0); width: 36px; height: 36px; border-width: 0px; border-radius: 18px; border-color: rgb(121, 116, 126);"
          >
            <button role="button"
                    tabindex="0"
                    class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-1awozwy r-16y2uox r-1777fci"
                    data-testid="delete-todo"
                    type="button"
                    style="border-radius: 18px;"
            >
              <div dir="auto"
                   role="img"
                   tabindex="-1"
                   class="css-146c3p1 r-1niwhzg r-lrvibr r-633pao"
                   style="font-size: 20px; color: rgb(244, 67, 54); transform: scaleX(1); line-height: 20px; font-family: material-community; font-weight: normal; font-style: normal;"
              >
                󰧧
              </div>
            </button>
          </div>
        </div>
        <div class="css-175oi2r r-18u37iz r-1w6e6rj"
             data-testid="todo-labels"
        >
          <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
               data-testid="chip-active-container"
               style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
          >
            <button aria-disabled="true"
                    disabled
                    role="button"
                    tabindex="-1"
                    class="css-175oi2r r-12vffkv r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
                    data-testid="chip-active"
                    type="button"
                    style="border-radius: 8px;"
            >
              <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
                   style="padding-right: 0px;"
              >
                <div dir="auto"
                     class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-p1pxzi r-1jkjb r-1kb76zh r-1mnahxq r-lrvibr"
                     style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
                >
                  errand
                </div>
              </div>
            </button>
          </div>
          <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
               data-testid="chip-active-container"
               style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
          >
            <button aria-disabled="true"
                    disabled
                    role="button"
                    tabindex="-1"
                    class="css-175oi2r r-12vffkv r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
                    data-testid="chip-active"
                    type="button"
                    style="border-radius: 8px;"
            >
              <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
                   style="padding-right: 0px;"
              >
                <div dir="auto"
                     class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-p1pxzi r-1jkjb r-1kb76zh r-1mnahxq r-lrvibr"
                     style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
                >
                  5min
                </div>
              </div>
            </button>
          </div>
          <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
               data-testid="chip-active-container"
               style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
          >
            <button aria-disabled="true"
                    disabled
                    role="button"
                    tabindex="-1"
                    class="css-175oi2r r-12vffkv r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
                    data-testid="chip-active"
                    type="button"
                    style="border-radius: 8px;"
            >
              <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
                   style="padding-right: 0px;"
              >
                <div dir="auto"
                     class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-p1pxzi r-1jkjb r-1kb76zh r-1mnahxq r-lrvibr"
                     style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
                >
                  low-effort
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Todo Item DefaultTodo smoke-test 1`] = `
<div class="css-175oi2r r-ai505k r-17gur6a r-1loqt21 r-105ug2t"
     data-testid="card-container"
     style="background-color: rgb(255, 251, 254);"
>
  <div class="css-175oi2r r-rs99b7 r-1pi2tsx r-u8s1d r-13qz1uu r-136ojw6 r-633pao"
       data-testid="card-outline"
       style="border-color: rgba(0, 0, 0, 0.12); border-radius: 0px;"
  >
  </div>
  <div tabindex="0"
       class="css-175oi2r r-1loqt21 r-1otgn73"
  >
    <div class="css-175oi2r r-1wbh5a2"
         data-testid="card"
    >
      <div class="css-175oi2r r-3pj75a r-w7s2jr r-xd6kpl r-1m04atk r-1pyaxff r-tskmnb">
        <div class="css-175oi2r r-18u37iz r-13qz1uu">
          <div class="css-175oi2r">
            <div aria-live="polite"
                 role="checkbox"
                 tabindex="0"
                 class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-6ncur5 r-1r8g8re r-qpntkw r-1acpoxo"
                 data-testid="complete-todo"
            >
              <div class="css-175oi2r"
                   style="transform: scale(1);"
              >
                <div dir="auto"
                     role="img"
                     tabindex="-1"
                     class="css-146c3p1 r-1niwhzg r-lrvibr r-633pao"
                     style="font-size: 24px; color: rgb(73, 69, 79); transform: scaleX(1); line-height: 24px; font-family: material-community; font-weight: normal; font-style: normal;"
                >
                  󰄱
                </div>
                <div class="css-175oi2r r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-1awozwy r-1777fci">
                  <div class="css-175oi2r r-1pexk7n r-1mcorv5"
                       style="border-color: rgb(73, 69, 79); border-width: 0px;"
                  >
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="css-175oi2r r-1iusvr4 r-16y2uox r-1un7vkp">
            <div class="css-175oi2r r-16y2uox">
            </div>
            <div dir="auto"
                 class="css-146c3p1 r-fdjqy7 r-1x2decy r-ubezar"
                 data-testid="description-text"
                 style="letter-spacing: 0px; font-weight: 400; color: rgb(28, 27, 31); direction: ltr;"
            >
              Default Todo
            </div>
            <div class="css-175oi2r r-16y2uox">
            </div>
          </div>
          <div class="css-175oi2r r-1udh08x r-crgep1 r-105ug2t"
               data-testid="label-todo-container"
               style="background-color: rgba(0, 0, 0, 0); width: 36px; height: 36px; border-width: 0px; border-radius: 18px; border-color: rgb(121, 116, 126);"
          >
            <button role="button"
                    tabindex="0"
                    class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-1awozwy r-16y2uox r-1777fci"
                    data-testid="label-todo"
                    type="button"
                    style="border-radius: 18px;"
            >
              <div dir="auto"
                   role="img"
                   tabindex="-1"
                   class="css-146c3p1 r-1niwhzg r-lrvibr r-633pao"
                   style="font-size: 20px; color: rgb(163, 213, 255); transform: scaleX(1); line-height: 20px; font-family: material-community; font-weight: normal; font-style: normal;"
              >
                󰜢
              </div>
            </button>
          </div>
          <div class="css-175oi2r r-1udh08x r-crgep1 r-105ug2t"
               data-testid="delete-todo-container"
               style="background-color: rgba(0, 0, 0, 0); width: 36px; height: 36px; border-width: 0px; border-radius: 18px; border-color: rgb(121, 116, 126);"
          >
            <button role="button"
                    tabindex="0"
                    class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-1awozwy r-16y2uox r-1777fci"
                    data-testid="delete-todo"
                    type="button"
                    style="border-radius: 18px;"
            >
              <div dir="auto"
                   role="img"
                   tabindex="-1"
                   class="css-146c3p1 r-1niwhzg r-lrvibr r-633pao"
                   style="font-size: 20px; color: rgb(244, 67, 54); transform: scaleX(1); line-height: 20px; font-family: material-community; font-weight: normal; font-style: normal;"
              >
                󰧧
              </div>
            </button>
          </div>
        </div>
        <div class="css-175oi2r r-18u37iz r-1w6e6rj"
             data-testid="todo-labels"
        >
          <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
               data-testid="chip-active-container"
               style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
          >
            <button aria-disabled="true"
                    disabled
                    role="button"
                    tabindex="-1"
                    class="css-175oi2r r-12vffkv r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
                    data-testid="chip-active"
                    type="button"
                    style="border-radius: 8px;"
            >
              <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
                   style="padding-right: 0px;"
              >
                <div dir="auto"
                     class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-p1pxzi r-1jkjb r-1kb76zh r-1mnahxq r-lrvibr"
                     style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
                >
                  errand
                </div>
              </div>
            </button>
          </div>
          <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
               data-testid="chip-active-container"
               style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
          >
            <button aria-disabled="true"
                    disabled
                    role="button"
                    tabindex="-1"
                    class="css-175oi2r r-12vffkv r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
                    data-testid="chip-active"
                    type="button"
                    style="border-radius: 8px;"
            >
              <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
                   style="padding-right: 0px;"
              >
                <div dir="auto"
                     class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-p1pxzi r-1jkjb r-1kb76zh r-1mnahxq r-lrvibr"
                     style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
                >
                  5min
                </div>
              </div>
            </button>
          </div>
          <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
               data-testid="chip-active-container"
               style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
          >
            <button aria-disabled="true"
                    disabled
                    role="button"
                    tabindex="-1"
                    class="css-175oi2r r-12vffkv r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
                    data-testid="chip-active"
                    type="button"
                    style="border-radius: 8px;"
            >
              <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
                   style="padding-right: 0px;"
              >
                <div dir="auto"
                     class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-p1pxzi r-1jkjb r-1kb76zh r-1mnahxq r-lrvibr"
                     style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
                >
                  low-effort
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Todo Item EditingTodo smoke-test 1`] = `
<div class="css-175oi2r r-ai505k r-17gur6a r-1loqt21 r-105ug2t"
     data-testid="card-container"
     style="background-color: rgb(255, 251, 254);"
>
  <div class="css-175oi2r r-rs99b7 r-1pi2tsx r-u8s1d r-13qz1uu r-136ojw6 r-633pao"
       data-testid="card-outline"
       style="border-color: rgba(0, 0, 0, 0.12); border-radius: 0px;"
  >
  </div>
  <div tabindex="0"
       class="css-175oi2r r-1loqt21 r-1otgn73"
  >
    <div class="css-175oi2r r-1wbh5a2"
         data-testid="card"
    >
      <div class="css-175oi2r r-3pj75a r-w7s2jr r-xd6kpl r-1m04atk r-1pyaxff r-tskmnb">
        <div class="css-175oi2r r-18u37iz r-13qz1uu">
          <div class="css-175oi2r">
            <div aria-live="polite"
                 role="checkbox"
                 tabindex="0"
                 class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-6ncur5 r-1r8g8re r-qpntkw r-1acpoxo"
                 data-testid="complete-todo"
            >
              <div class="css-175oi2r"
                   style="transform: scale(1);"
              >
                <div dir="auto"
                     role="img"
                     tabindex="-1"
                     class="css-146c3p1 r-1niwhzg r-lrvibr r-633pao"
                     style="font-size: 24px; color: rgb(73, 69, 79); transform: scaleX(1); line-height: 24px; font-family: material-community; font-weight: normal; font-style: normal;"
                >
                  󰄱
                </div>
                <div class="css-175oi2r r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-1awozwy r-1777fci">
                  <div class="css-175oi2r r-1pexk7n r-1mcorv5"
                       style="border-color: rgb(73, 69, 79); border-width: 0px;"
                  >
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="css-175oi2r"
               style="background-color: rgb(231, 224, 236); border-top-left-radius: 4px; border-top-right-radius: 4px; border-width: 0px; flex-shrink: 1; margin-left: 9px; padding: 0px; width: 100%;"
          >
            <div class="css-175oi2r r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-184en5c r-109y4c4"
                 data-testid="text-input-underline"
                 style="background-color: rgb(73, 69, 79); transform: scaleY(0.5);"
            >
            </div>
            <div class="css-175oi2r r-16y2uox r-1mdbw0j r-wk8lta"
                 style="min-height: 40px;"
            >
              <textarea autocapitalize="sentences"
                        autocomplete="on"
                        autocorrect="on"
                        dir="auto"
                        rows="4"
                        spellcheck="true"
                        virtualkeyboardpolicy="auto"
                        class="css-11aywtz r-6taxm2 r-16y2uox r-crgep1"
                        data-testid="text-input-flat"
                        style="--placeholderTextColor: transparent; padding: 9px 16px; font-family: Roboto, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; letter-spacing: 0.15px; line-height: 19.2px; font-size: 16px; color: rgb(28, 27, 31); vertical-align: top; text-align: left; min-width: 65px; outline: none;"
              >
                Editing Todo
              </textarea>
            </div>
          </div>
          <div class="css-175oi2r r-1udh08x r-crgep1 r-105ug2t"
               data-testid="cancel-edit-container"
               style="background-color: rgba(0, 0, 0, 0); width: 36px; height: 36px; border-width: 0px; border-radius: 18px; border-color: rgb(121, 116, 126);"
          >
            <button role="button"
                    tabindex="0"
                    class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-1awozwy r-16y2uox r-1777fci"
                    data-testid="cancel-edit"
                    type="button"
                    style="border-radius: 18px;"
            >
              <div dir="auto"
                   role="img"
                   tabindex="-1"
                   class="css-146c3p1 r-1niwhzg r-lrvibr r-633pao"
                   style="font-size: 20px; color: rgb(66, 66, 66); transform: scaleX(1); line-height: 20px; font-family: material-community; font-weight: normal; font-style: normal;"
              >
                󰜺
              </div>
            </button>
          </div>
        </div>
        <div class="css-175oi2r r-18u37iz r-1w6e6rj"
             data-testid="todo-labels"
        >
          <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
               data-testid="chip-active-container"
               style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
          >
            <button aria-disabled="true"
                    disabled
                    role="button"
                    tabindex="-1"
                    class="css-175oi2r r-12vffkv r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
                    data-testid="chip-active"
                    type="button"
                    style="border-radius: 8px;"
            >
              <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
                   style="padding-right: 0px;"
              >
                <div dir="auto"
                     class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-p1pxzi r-1jkjb r-1kb76zh r-1mnahxq r-lrvibr"
                     style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
                >
                  errand
                </div>
              </div>
            </button>
          </div>
          <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
               data-testid="chip-active-container"
               style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
          >
            <button aria-disabled="true"
                    disabled
                    role="button"
                    tabindex="-1"
                    class="css-175oi2r r-12vffkv r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
                    data-testid="chip-active"
                    type="button"
                    style="border-radius: 8px;"
            >
              <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
                   style="padding-right: 0px;"
              >
                <div dir="auto"
                     class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-p1pxzi r-1jkjb r-1kb76zh r-1mnahxq r-lrvibr"
                     style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
                >
                  5min
                </div>
              </div>
            </button>
          </div>
          <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
               data-testid="chip-active-container"
               style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
          >
            <button aria-disabled="true"
                    disabled
                    role="button"
                    tabindex="-1"
                    class="css-175oi2r r-12vffkv r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
                    data-testid="chip-active"
                    type="button"
                    style="border-radius: 8px;"
            >
              <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
                   style="padding-right: 0px;"
              >
                <div dir="auto"
                     class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-p1pxzi r-1jkjb r-1kb76zh r-1mnahxq r-lrvibr"
                     style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
                >
                  low-effort
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Todo Item NoLabelsTodo smoke-test 1`] = `
<div class="css-175oi2r r-ai505k r-17gur6a r-1loqt21 r-105ug2t"
     data-testid="card-container"
     style="background-color: rgb(255, 251, 254);"
>
  <div class="css-175oi2r r-rs99b7 r-1pi2tsx r-u8s1d r-13qz1uu r-136ojw6 r-633pao"
       data-testid="card-outline"
       style="border-color: rgba(0, 0, 0, 0.12); border-radius: 0px;"
  >
  </div>
  <div tabindex="0"
       class="css-175oi2r r-1loqt21 r-1otgn73"
  >
    <div class="css-175oi2r r-1wbh5a2"
         data-testid="card"
    >
      <div class="css-175oi2r r-3pj75a r-w7s2jr r-xd6kpl r-1m04atk r-1pyaxff r-tskmnb">
        <div class="css-175oi2r r-18u37iz r-13qz1uu">
          <div class="css-175oi2r">
            <div aria-live="polite"
                 role="checkbox"
                 tabindex="0"
                 class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-6ncur5 r-1r8g8re r-qpntkw r-1acpoxo"
                 data-testid="complete-todo"
            >
              <div class="css-175oi2r"
                   style="transform: scale(1);"
              >
                <div dir="auto"
                     role="img"
                     tabindex="-1"
                     class="css-146c3p1 r-1niwhzg r-lrvibr r-633pao"
                     style="font-size: 24px; color: rgb(73, 69, 79); transform: scaleX(1); line-height: 24px; font-family: material-community; font-weight: normal; font-style: normal;"
                >
                  󰄱
                </div>
                <div class="css-175oi2r r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-1awozwy r-1777fci">
                  <div class="css-175oi2r r-1pexk7n r-1mcorv5"
                       style="border-color: rgb(73, 69, 79); border-width: 0px;"
                  >
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="css-175oi2r r-1iusvr4 r-16y2uox r-1un7vkp">
            <div class="css-175oi2r r-16y2uox">
            </div>
            <div dir="auto"
                 class="css-146c3p1 r-fdjqy7 r-1x2decy r-ubezar"
                 data-testid="description-text"
                 style="letter-spacing: 0px; font-weight: 400; color: rgb(28, 27, 31); direction: ltr;"
            >
              No Labels Todo
            </div>
            <div class="css-175oi2r r-16y2uox">
            </div>
          </div>
          <div class="css-175oi2r r-1udh08x r-crgep1 r-105ug2t"
               data-testid="label-todo-container"
               style="background-color: rgba(0, 0, 0, 0); width: 36px; height: 36px; border-width: 0px; border-radius: 18px; border-color: rgb(121, 116, 126);"
          >
            <button role="button"
                    tabindex="0"
                    class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-1awozwy r-16y2uox r-1777fci"
                    data-testid="label-todo"
                    type="button"
                    style="border-radius: 18px;"
            >
              <div dir="auto"
                   role="img"
                   tabindex="-1"
                   class="css-146c3p1 r-1niwhzg r-lrvibr r-633pao"
                   style="font-size: 20px; color: rgb(163, 213, 255); transform: scaleX(1); line-height: 20px; font-family: material-community; font-weight: normal; font-style: normal;"
              >
                󰜢
              </div>
            </button>
          </div>
          <div class="css-175oi2r r-1udh08x r-crgep1 r-105ug2t"
               data-testid="delete-todo-container"
               style="background-color: rgba(0, 0, 0, 0); width: 36px; height: 36px; border-width: 0px; border-radius: 18px; border-color: rgb(121, 116, 126);"
          >
            <button role="button"
                    tabindex="0"
                    class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-1awozwy r-16y2uox r-1777fci"
                    data-testid="delete-todo"
                    type="button"
                    style="border-radius: 18px;"
            >
              <div dir="auto"
                   role="img"
                   tabindex="-1"
                   class="css-146c3p1 r-1niwhzg r-lrvibr r-633pao"
                   style="font-size: 20px; color: rgb(244, 67, 54); transform: scaleX(1); line-height: 20px; font-family: material-community; font-weight: normal; font-style: normal;"
              >
                󰧧
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Todo Item WrappedLabelsTodo smoke-test 1`] = `
<div class="css-175oi2r r-ai505k r-17gur6a r-1loqt21 r-105ug2t"
     data-testid="card-container"
     style="background-color: rgb(255, 251, 254);"
>
  <div class="css-175oi2r r-rs99b7 r-1pi2tsx r-u8s1d r-13qz1uu r-136ojw6 r-633pao"
       data-testid="card-outline"
       style="border-color: rgba(0, 0, 0, 0.12); border-radius: 0px;"
  >
  </div>
  <div tabindex="0"
       class="css-175oi2r r-1loqt21 r-1otgn73"
  >
    <div class="css-175oi2r r-1wbh5a2"
         data-testid="card"
    >
      <div class="css-175oi2r r-3pj75a r-w7s2jr r-xd6kpl r-1m04atk r-1pyaxff r-tskmnb">
        <div class="css-175oi2r r-18u37iz r-13qz1uu">
          <div class="css-175oi2r">
            <div aria-live="polite"
                 role="checkbox"
                 tabindex="0"
                 class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-6ncur5 r-1r8g8re r-qpntkw r-1acpoxo"
                 data-testid="complete-todo"
            >
              <div class="css-175oi2r"
                   style="transform: scale(1);"
              >
                <div dir="auto"
                     role="img"
                     tabindex="-1"
                     class="css-146c3p1 r-1niwhzg r-lrvibr r-633pao"
                     style="font-size: 24px; color: rgb(73, 69, 79); transform: scaleX(1); line-height: 24px; font-family: material-community; font-weight: normal; font-style: normal;"
                >
                  󰄱
                </div>
                <div class="css-175oi2r r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-1awozwy r-1777fci">
                  <div class="css-175oi2r r-1pexk7n r-1mcorv5"
                       style="border-color: rgb(73, 69, 79); border-width: 0px;"
                  >
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="css-175oi2r r-1iusvr4 r-16y2uox r-1un7vkp">
            <div class="css-175oi2r r-16y2uox">
            </div>
            <div dir="auto"
                 class="css-146c3p1 r-fdjqy7 r-1x2decy r-ubezar"
                 data-testid="description-text"
                 style="letter-spacing: 0px; font-weight: 400; color: rgb(28, 27, 31); direction: ltr;"
            >
              Wrapped Labels Todo
            </div>
            <div class="css-175oi2r r-16y2uox">
            </div>
          </div>
          <div class="css-175oi2r r-1udh08x r-crgep1 r-105ug2t"
               data-testid="label-todo-container"
               style="background-color: rgba(0, 0, 0, 0); width: 36px; height: 36px; border-width: 0px; border-radius: 18px; border-color: rgb(121, 116, 126);"
          >
            <button role="button"
                    tabindex="0"
                    class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-1awozwy r-16y2uox r-1777fci"
                    data-testid="label-todo"
                    type="button"
                    style="border-radius: 18px;"
            >
              <div dir="auto"
                   role="img"
                   tabindex="-1"
                   class="css-146c3p1 r-1niwhzg r-lrvibr r-633pao"
                   style="font-size: 20px; color: rgb(163, 213, 255); transform: scaleX(1); line-height: 20px; font-family: material-community; font-weight: normal; font-style: normal;"
              >
                󰜢
              </div>
            </button>
          </div>
          <div class="css-175oi2r r-1udh08x r-crgep1 r-105ug2t"
               data-testid="delete-todo-container"
               style="background-color: rgba(0, 0, 0, 0); width: 36px; height: 36px; border-width: 0px; border-radius: 18px; border-color: rgb(121, 116, 126);"
          >
            <button role="button"
                    tabindex="0"
                    class="css-175oi2r r-1otgn73 r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-1awozwy r-16y2uox r-1777fci"
                    data-testid="delete-todo"
                    type="button"
                    style="border-radius: 18px;"
            >
              <div dir="auto"
                   role="img"
                   tabindex="-1"
                   class="css-146c3p1 r-1niwhzg r-lrvibr r-633pao"
                   style="font-size: 20px; color: rgb(244, 67, 54); transform: scaleX(1); line-height: 20px; font-family: material-community; font-weight: normal; font-style: normal;"
              >
                󰧧
              </div>
            </button>
          </div>
        </div>
        <div class="css-175oi2r r-18u37iz r-1w6e6rj"
             data-testid="todo-labels"
        >
          <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
               data-testid="chip-active-container"
               style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
          >
            <button aria-disabled="true"
                    disabled
                    role="button"
                    tabindex="-1"
                    class="css-175oi2r r-12vffkv r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
                    data-testid="chip-active"
                    type="button"
                    style="border-radius: 8px;"
            >
              <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
                   style="padding-right: 0px;"
              >
                <div dir="auto"
                     class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-p1pxzi r-1jkjb r-1kb76zh r-1mnahxq r-lrvibr"
                     style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
                >
                  low-energy
                </div>
              </div>
            </button>
          </div>
          <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
               data-testid="chip-active-container"
               style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
          >
            <button aria-disabled="true"
                    disabled
                    role="button"
                    tabindex="-1"
                    class="css-175oi2r r-12vffkv r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
                    data-testid="chip-active"
                    type="button"
                    style="border-radius: 8px;"
            >
              <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
                   style="padding-right: 0px;"
              >
                <div dir="auto"
                     class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-p1pxzi r-1jkjb r-1kb76zh r-1mnahxq r-lrvibr"
                     style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
                >
                  high-energy
                </div>
              </div>
            </button>
          </div>
          <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
               data-testid="chip-active-container"
               style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
          >
            <button aria-disabled="true"
                    disabled
                    role="button"
                    tabindex="-1"
                    class="css-175oi2r r-12vffkv r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
                    data-testid="chip-active"
                    type="button"
                    style="border-radius: 8px;"
            >
              <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
                   style="padding-right: 0px;"
              >
                <div dir="auto"
                     class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-p1pxzi r-1jkjb r-1kb76zh r-1mnahxq r-lrvibr"
                     style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
                >
                  vague
                </div>
              </div>
            </button>
          </div>
          <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
               data-testid="chip-active-container"
               style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
          >
            <button aria-disabled="true"
                    disabled
                    role="button"
                    tabindex="-1"
                    class="css-175oi2r r-12vffkv r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
                    data-testid="chip-active"
                    type="button"
                    style="border-radius: 8px;"
            >
              <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
                   style="padding-right: 0px;"
              >
                <div dir="auto"
                     class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-p1pxzi r-1jkjb r-1kb76zh r-1mnahxq r-lrvibr"
                     style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
                >
                  work
                </div>
              </div>
            </button>
          </div>
          <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
               data-testid="chip-active-container"
               style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
          >
            <button aria-disabled="true"
                    disabled
                    role="button"
                    tabindex="-1"
                    class="css-175oi2r r-12vffkv r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
                    data-testid="chip-active"
                    type="button"
                    style="border-radius: 8px;"
            >
              <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
                   style="padding-right: 0px;"
              >
                <div dir="auto"
                     class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-p1pxzi r-1jkjb r-1kb76zh r-1mnahxq r-lrvibr"
                     style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
                >
                  home
                </div>
              </div>
            </button>
          </div>
          <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
               data-testid="chip-active-container"
               style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
          >
            <button aria-disabled="true"
                    disabled
                    role="button"
                    tabindex="-1"
                    class="css-175oi2r r-12vffkv r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
                    data-testid="chip-active"
                    type="button"
                    style="border-radius: 8px;"
            >
              <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
                   style="padding-right: 0px;"
              >
                <div dir="auto"
                     class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-p1pxzi r-1jkjb r-1kb76zh r-1mnahxq r-lrvibr"
                     style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
                >
                  errand
                </div>
              </div>
            </button>
          </div>
          <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
               data-testid="chip-active-container"
               style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
          >
            <button aria-disabled="true"
                    disabled
                    role="button"
                    tabindex="-1"
                    class="css-175oi2r r-12vffkv r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
                    data-testid="chip-active"
                    type="button"
                    style="border-radius: 8px;"
            >
              <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
                   style="padding-right: 0px;"
              >
                <div dir="auto"
                     class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-p1pxzi r-1jkjb r-1kb76zh r-1mnahxq r-lrvibr"
                     style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
                >
                  mobile
                </div>
              </div>
            </button>
          </div>
          <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
               data-testid="chip-active-container"
               style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
          >
            <button aria-disabled="true"
                    disabled
                    role="button"
                    tabindex="-1"
                    class="css-175oi2r r-12vffkv r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
                    data-testid="chip-active"
                    type="button"
                    style="border-radius: 8px;"
            >
              <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
                   style="padding-right: 0px;"
              >
                <div dir="auto"
                     class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-p1pxzi r-1jkjb r-1kb76zh r-1mnahxq r-lrvibr"
                     style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
                >
                  desktop
                </div>
              </div>
            </button>
          </div>
          <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
               data-testid="chip-active-container"
               style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
          >
            <button aria-disabled="true"
                    disabled
                    role="button"
                    tabindex="-1"
                    class="css-175oi2r r-12vffkv r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
                    data-testid="chip-active"
                    type="button"
                    style="border-radius: 8px;"
            >
              <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
                   style="padding-right: 0px;"
              >
                <div dir="auto"
                     class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-p1pxzi r-1jkjb r-1kb76zh r-1mnahxq r-lrvibr"
                     style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
                >
                  email
                </div>
              </div>
            </button>
          </div>
          <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
               data-testid="chip-active-container"
               style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
          >
            <button aria-disabled="true"
                    disabled
                    role="button"
                    tabindex="-1"
                    class="css-175oi2r r-12vffkv r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
                    data-testid="chip-active"
                    type="button"
                    style="border-radius: 8px;"
            >
              <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
                   style="padding-right: 0px;"
              >
                <div dir="auto"
                     class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-p1pxzi r-1jkjb r-1kb76zh r-1mnahxq r-lrvibr"
                     style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
                >
                  urgent
                </div>
              </div>
            </button>
          </div>
          <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
               data-testid="chip-active-container"
               style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
          >
            <button aria-disabled="true"
                    disabled
                    role="button"
                    tabindex="-1"
                    class="css-175oi2r r-12vffkv r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
                    data-testid="chip-active"
                    type="button"
                    style="border-radius: 8px;"
            >
              <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
                   style="padding-right: 0px;"
              >
                <div dir="auto"
                     class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-p1pxzi r-1jkjb r-1kb76zh r-1mnahxq r-lrvibr"
                     style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
                >
                  5 minutes
                </div>
              </div>
            </button>
          </div>
          <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
               data-testid="chip-active-container"
               style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
          >
            <button aria-disabled="true"
                    disabled
                    role="button"
                    tabindex="-1"
                    class="css-175oi2r r-12vffkv r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
                    data-testid="chip-active"
                    type="button"
                    style="border-radius: 8px;"
            >
              <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
                   style="padding-right: 0px;"
              >
                <div dir="auto"
                     class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-p1pxzi r-1jkjb r-1kb76zh r-1mnahxq r-lrvibr"
                     style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
                >
                  25 minutes
                </div>
              </div>
            </button>
          </div>
          <div class="css-175oi2r r-1phboty r-18u37iz r-1yadl64 r-1iizze8 r-1bq2mok r-105ug2t"
               data-testid="chip-active-container"
               style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
          >
            <button aria-disabled="true"
                    disabled
                    role="button"
                    tabindex="-1"
                    class="css-175oi2r r-12vffkv r-1loqt21 r-bnwqim r-ctqt5z r-1udh08x r-13qz1uu"
                    data-testid="chip-active"
                    type="button"
                    style="border-radius: 8px;"
            >
              <div class="css-175oi2r r-1awozwy r-18u37iz r-bnwqim r-gy4na3"
                   style="padding-right: 0px;"
              >
                <div dir="auto"
                     class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-fdjqy7 r-ws14 r-9iso6 r-1x2decy r-p1pxzi r-1jkjb r-1kb76zh r-1mnahxq r-lrvibr"
                     style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
                >
                  60 minutes
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
